Update HTML meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta
+      name="description"
+      content="See if you can solve 32 simultaneous wordles in 42 tries!"
+    />
+    <meta
+      name="keywords"
+      content="Duotrigordle, Hexadecordle, Octordle, Quordle, Dordle, Wordle, word game, puzzle, brain teaser"
+    />
+    <meta name="author" content="Bryan Chen" />
+    <meta name="theme-color" content="#181a1b" />
+    <meta name="color-scheme" content="dark" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="%PUBLIC_URL%/favicon.ico"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Play 32 wordles simultaneously!" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Duotrigordle</title>
@@ -14,6 +27,20 @@
       href="https://fonts.googleapis.com/css2?family=Outfit&display=swap"
       rel="stylesheet"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-PTFTMV1HQZ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-PTFTMV1HQZ");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
