Update meta description

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="See if you can solve 32 simultaneous wordles in 42 tries!"
+      content="Put your skills to the test and solve thirty-two Wordles at once! You have 42 guesses to solve all 32 words. A new Duotrigordle available each day to solve."
     />
     <meta
       name="keywords"
