--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,14 @@
 
       gtag("config", "G-PTFTMV1HQZ");
     </script>
+    <! -- Google AdSense -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4459769759726497"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body style="overscroll-behavior-y: contain;">
+  <body style="overscroll-behavior-y: contain">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
