--- a/public/index.html
+++ b/public/index.html
@@ -45,5 +45,10 @@
   <body style="overscroll-behavior-y: contain">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4459769759726497"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
