--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta
       name="description"
       content="Put your skills to the test and solve thirty-two Wordles at once! You have 37 guesses to solve all 32 words. A new Duotrigordle available each day to solve."
@@ -13,16 +13,11 @@
     <meta name="author" content="Bryan Chen" />
     <meta name="theme-color" content="#181a1b" />
     <meta name="color-scheme" content="dark" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="%PUBLIC_URL%/favicon.ico"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Duotrigordle</title>
-    <link href="https://unpkg.com/sanitize.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit&display=swap"
       rel="stylesheet"
@@ -42,13 +37,9 @@
       gtag("config", "G-PTFTMV1HQZ");
     </script>
   </head>
-  <body style="overscroll-behavior-y: contain">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4459769759726497"
-      crossorigin="anonymous"
-    ></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
