Scaffold header and welcome screen

--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Duotrigordle</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Outfit&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Rubik&family=Roboto+Mono&display=swap"
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PTFTMV1HQZ"
     ></script>
@@ -35,7 +38,7 @@
       gtag("js", new Date());
 
       gtag("config", "G-PTFTMV1HQZ");
-    </script>
+    </script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
