--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="Duotrigordle, Hexadecordle, Octordle, Quordle, Dordle, Wordle, word game, puzzle, brain teaser"
     />
     <meta name="author" content="Bryan Chen" />
-    <meta name="theme-color" content="#181a1b" />
+    <meta name="theme-color" content="#17171c" />
     <meta name="color-scheme" content="dark" />
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/logo192.png" />
@@ -23,8 +23,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Rubik&family=Roboto+Mono&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
+    />
+    <!-- Asset Prefetch -->
+    <link rel="prefetch" href="/src/assets/about.svg" />
+    <link rel="prefetch" href="/src/assets/back.svg" />
+    <link rel="prefetch" href="/src/assets/fullscreen.svg" />
+    <link rel="prefetch" href="/src/assets/fullscreen-exit.svg" />
+    <link rel="prefetch" href="/src/assets/settings.svg" />
+    <link rel="prefetch" href="/src/assets/stats.svg" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- <script
       async
