--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,13 @@
     <meta name="author" content="Bryan Chen" />
     <meta name="theme-color" content="#17171c" />
     <meta name="color-scheme" content="dark" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="%PUBLIC_URL%/favicon.ico"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Duotrigordle</title>
     <!-- Google Fonts -->
@@ -30,12 +34,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
     />
     <!-- Asset Prefetch -->
-    <link rel="prefetch" href="/src/assets/about.svg" />
-    <link rel="prefetch" href="/src/assets/back.svg" />
-    <link rel="prefetch" href="/src/assets/fullscreen.svg" />
-    <link rel="prefetch" href="/src/assets/fullscreen-exit.svg" />
-    <link rel="prefetch" href="/src/assets/settings.svg" />
-    <link rel="prefetch" href="/src/assets/stats.svg" />
+    <link rel="prefetch" href="%PUBLIC_URL%/src/assets/about.svg" />
+    <link rel="prefetch" href="%PUBLIC_URL%/src/assets/back.svg" />
+    <link rel="prefetch" href="%PUBLIC_URL%/src/assets/fullscreen.svg" />
+    <link rel="prefetch" href="%PUBLIC_URL%/src/assets/fullscreen-exit.svg" />
+    <link rel="prefetch" href="%PUBLIC_URL%/src/assets/settings.svg" />
+    <link rel="prefetch" href="%PUBLIC_URL%/src/assets/stats.svg" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <!-- <script
       async
@@ -54,6 +58,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
