--- a/public/privacy.html
+++ b/public/privacy.html
@@ -7,14 +7,14 @@
     <title>Duotrigordle Privacy Policy</title>
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Outfit&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
       rel="stylesheet"
     />
     <style>
       body {
         background-color: black;
         color: white;
-        font-family: "Outfit", sans-serif;
+        font-family: "Rubik", sans-serif;
       }
       a {
         color: white;
