--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,7 @@
     <meta name="author" content="Bryan Chen" />
     <meta name="theme-color" content="#17171c" />
     <meta name="color-scheme" content="dark" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="%PUBLIC_URL%/favicon.ico"
-    />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
