--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script
+    <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PTFTMV1HQZ"
     ></script>
@@ -42,10 +42,16 @@
       gtag("js", new Date());
 
       gtag("config", "G-PTFTMV1HQZ");
-    </script> -->
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- Google Adsense -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4459769759726497"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
