--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,30 @@
     <meta name="author" content="Bryan Chen" />
     <meta name="theme-color" content="#17171c" />
     <meta name="color-scheme" content="dark" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/logo16.png"
+      sizes="16x16"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/logo32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/logo64.png"
+      sizes="64x64"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="%PUBLIC_URL%/logo192.png"
+      sizes="192x192"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
