--- a/public/index.html
+++ b/public/index.html
@@ -70,11 +70,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- Google Adsense -->
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4459769759726497"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Ezoic Ads -->
+    <script src="//www.ezojs.com/ezoic/sa.min.js"></script>
   </body>
 </html>
