Minor cosmetic fixes

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       content="Duotrigordle, Hexadecordle, Octordle, Quordle, Dordle, Wordle, word game, puzzle, brain teaser"
     />
     <meta name="author" content="Bryan Chen" />
-    <meta name="theme-color" content="#17171c" />
+    <meta name="theme-color" content="#000" />
     <meta name="color-scheme" content="dark" />
     <link
       rel="icon"
