Update ezoic global script

--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
     />
+    <!-- Ezoic Ads -->
+    <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- Ezoic Ads -->
-    <script src="//www.ezojs.com/ezoic/sa.min.js"></script>
   </body>
 </html>
